running down style issues on mobile

--- a/main.css
+++ b/main.css
@@ -315,7 +315,8 @@ a:active {
     header.sticky {
         width: 100%;
         position: fixed;
-        height: 137px;
+        height: 142px;
+      
     }
 
     #submit {
@@ -328,7 +329,7 @@ a:active {
 
     #header-placeholder {
         width: 100%;
-        height: 462.5px;
+        height: 467.5px;
         background-color:#6D9DC5;
     }
     
